--- a/EDA/Diwali_sales/Diwali_EDA.ipynb
+++ b/EDA/Diwali_sales/Diwali_EDA.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +135,8 @@
        "      <th>Product_Category</th>\n",
        "      <th>Orders</th>\n",
        "      <th>Amount</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>unnamed1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -153,6 +155,8 @@
        "      <td>Auto</td>\n",
        "      <td>1</td>\n",
        "      <td>23952</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -169,6 +173,8 @@
        "      <td>Auto</td>\n",
        "      <td>3</td>\n",
        "      <td>23934</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -185,6 +191,8 @@
        "      <td>Auto</td>\n",
        "      <td>3</td>\n",
        "      <td>23924</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -201,6 +209,8 @@
        "      <td>Auto</td>\n",
        "      <td>2</td>\n",
        "      <td>23912</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -217,6 +227,8 @@
        "      <td>Auto</td>\n",
        "      <td>2</td>\n",
        "      <td>23877</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -230,15 +242,22 @@
        "3  1001425     Sudevi  P00237842      M      0-17   16               0   \n",
        "4  1000588       Joni  P00057942      M     26-35   28               1   \n",
        "\n",
-       "            State      Zone       Occupation Product_Category  Orders  Amount  \n",
-       "0     Maharashtra   Western       Healthcare             Auto       1   23952  \n",
-       "1  Andhra Pradesh  Southern             Govt             Auto       3   23934  \n",
-       "2   Uttar Pradesh   Central       Automobile             Auto       3   23924  \n",
-       "3       Karnataka  Southern     Construction             Auto       2   23912  \n",
-       "4         Gujarat   Western  Food Processing             Auto       2   23877  "
+       "            State      Zone       Occupation Product_Category  Orders  Amount  \\\n",
+       "0     Maharashtra   Western       Healthcare             Auto       1   23952   \n",
+       "1  Andhra Pradesh  Southern             Govt             Auto       3   23934   \n",
+       "2   Uttar Pradesh   Central       Automobile             Auto       3   23924   \n",
+       "3       Karnataka  Southern     Construction             Auto       2   23912   \n",
+       "4         Gujarat   Western  Food Processing             Auto       2   23877   \n",
+       "\n",
+       "  Status unnamed1  \n",
+       "0                  \n",
+       "1                  \n",
+       "2                  \n",
+       "3                  \n",
+       "4                  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +457,7 @@
        "4  23877.0     NaN       NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +477,7 @@
        "(11251, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +586,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +675,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +698,7 @@
        "8"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +771,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +791,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +811,7 @@
        "(11243, 12)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +888,7 @@
        "0  Western  Healthcare             Auto       1  23952.0  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +916,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1092,7 @@
        "4  23877.0        Adult  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1232,7 @@
        "Amount          12672.0  23952.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1354,7 @@
        "Age_category      11243      4               Adult  6416"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1656,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1703,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1702,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1736,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1728,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2806,7 @@
        "10848       2   1846.0       Senior  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2804,7 +2823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2828,7 +2847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2862,7 @@
        "Name: Orders, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2855,7 +2874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2892,7 +2911,7 @@
        "Name: Orders, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2900,6 +2919,26 @@
    "source": [
     "total_ordre_zone = df1.groupby('Zone')['Orders'].sum().sort_values(ascending=False)\n",
     "total_ordre_zone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10636,  6744,  4866,  3724,  2011], dtype=int64)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_ordre_zone.values"
    ]
   },
   {
@@ -2911,7 +2950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +3007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3006,11 +3045,11 @@
     "axarr[2][0].set_title(\"Orders Vs Price\", fontsize=14)\n",
     "\n",
     "# Age Group Vs Price\n",
-    "df1.groupby('Age_category')['Amount'].sum().sort_values(ascending=False).head(10).plot.bar(ax=axarr[2][1], fontsize=12, color=sns.color_palette('summer'))\n",
+    "df1.groupby('Age_category')['Amount'].sum().sort_values(ascending=False).plot.bar(ax=axarr[2][1], fontsize=12, color=sns.color_palette('summer'))\n",
     "axarr[2][1].set_title(\"Age Group Vs Price\", fontsize=14)\n",
     "\n",
     "# Gender Vs Orders\n",
-    "df1.groupby('Gender')['Orders'].count().sort_values(ascending=False).head(10).plot.bar(ax=axarr[3][0], fontsize=12, color='lightgreen')\n",
+    "df1.groupby('Gender')['Orders'].count().sort_values(ascending=False).plot.bar(ax=axarr[3][0], fontsize=12, color='lightgreen')\n",
     "axarr[3][0].set_title(\"Gender Orders\", fontsize=14)\n",
     "\n",
     "# Marital_Status Vs Price\n",
