--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1573,26 +1573,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5684df25",
+   "execution_count": 28,
+   "id": "74ed1bb4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average grade for Eva: 78.75\n",
-      "Subject with highest grade for David: History\n",
-      "Passing students: ['Alice', 'Bob', 'Charlie', 'David']\n",
-      "Subject-wise performance: {'Math': 80.6, 'Science': 80.4, 'English': 72.0, 'History': 82.2}\n",
-      "Students failed in Science: ['Eva']\n",
-      "Overall best performing student: Alice\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dummy student names\n",
     "students = ['Alice', 'Bob', 'Charlie', 'David', 'Eva']\n",
+    "\n",
+    "# Specified subject names\n",
+    "subjects = ['Math', 'Science', 'English', 'History']\n",
     "\n",
     "# Dummy grades for each student (Math, Science, English, History)\n",
     "grades = {\n",
@@ -1601,17 +1591,78 @@
     "    'Charlie': [82, 60, 75, 88],\n",
     "    'David': [65, 70, 68, 75],\n",
     "    'Eva': [88, 92, 45, 90]\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d6f3cdd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average grade for Alice: 88.75\n",
+      "Average grade for Bob: 80.75\n",
+      "Average grade for Charlie: 76.25\n",
+      "Average grade for David: 69.5\n",
+      "Average grade for Eva: 78.75\n"
+     ]
+    }
+   ],
+   "source": [
     "def average_grade(grades_list):\n",
     "    return sum(grades_list) / len(grades_list)\n",
     "\n",
+    "for name in students:\n",
+    "    print(f\"Average grade for {name}:\", average_grade(grades[name]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "920fbe32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject with highest grade for Alice: English\n",
+      "Subject with highest grade for Bob: Science\n",
+      "Subject with highest grade for Charlie: History\n",
+      "Subject with highest grade for David: History\n",
+      "Subject with highest grade for Eva: Science\n"
+     ]
+    }
+   ],
+   "source": [
     "def highest_grade_subject(grades_list):\n",
-    "    subjects = ['Math', 'Science', 'English', 'History']\n",
     "    max_grade = max(grades_list)\n",
     "    max_index = grades_list.index(max_grade)\n",
     "    return subjects[max_index]\n",
     "\n",
+    "for name in students:\n",
+    "    print(f\"Subject with highest grade for {name}:\", highest_grade_subject(grades[name]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fc0c7d0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passing students: ['Alice', 'Bob', 'Charlie', 'David']\n"
+     ]
+    }
+   ],
+   "source": [
     "def passing_students(grades_dict):\n",
     "    pass_students = []\n",
     "    for student, grades_list in grades_dict.items():\n",
@@ -1619,125 +1670,90 @@
     "            pass_students.append(student)\n",
     "    return pass_students\n",
     "\n",
+    "print(\"Passing students:\", passing_students(grades))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "45f6399e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject-wise performance: {'Math': 80.6, 'Science': 80.4, 'English': 72.0, 'History': 82.2}\n"
+     ]
+    }
+   ],
+   "source": [
     "def subject_wise_performance(grades_dict):\n",
-    "    subjects = ['Math', 'Science', 'English', 'History']\n",
-    "    performance = {}\n",
-    "    for subject in subjects:\n",
-    "        subject_grades = [grades_dict[student][subjects.index(subject)] for student in students]\n",
-    "        performance[subject] = average_grade(subject_grades)\n",
-    "    return performance\n",
+    "    performance = {}  # Initialize an empty dictionary to store average grades for each subject.\n",
     "\n",
+    "    for subject in subjects:  # Iterate through each subject.\n",
+    "        \n",
+    "        subject_grades = []  # Initialize an empty list to store grades for the current subject.\n",
+    "        for student in grades_dict:  # Iterate through each student in the grades dictionary.\n",
+    "            grade_index = subjects.index(subject)  # Find the index of the subject in the subjects list.\n",
+    "            subject_grades.append(grades_dict[student][grade_index])  # Append the student's grade for the current subject to the list.\n",
+    "        \n",
+    "        performance[subject] = average_grade(subject_grades)  # Calculate and store the average grade for the current subject.\n",
+    "    \n",
+    "    return performance  # Return the dictionary with average grades for each subject.\n",
+    "\n",
+    "print(\"Subject-wise performance:\", subject_wise_performance(grades))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ec45882d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Students failed in Math: []\n",
+      "Students failed in Science: []\n",
+      "Students failed in English: ['Eva']\n",
+      "Students failed in History: []\n"
+     ]
+    }
+   ],
+   "source": [
     "def students_failed_subject(grades_dict, subject):\n",
     "    failed_students = []\n",
-    "    subjects = ['Math', 'Science', 'English', 'History']\n",
     "    for student, grades_list in grades_dict.items():\n",
     "        if grades_list[subjects.index(subject)] < 50:\n",
     "            failed_students.append(student)\n",
     "    return failed_students\n",
     "\n",
+    "for subject in subjects:\n",
+    "    print(f\"Students failed in {subject}:\", students_failed_subject(grades, subject))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d18e7c6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall best performing student: Alice\n"
+     ]
+    }
+   ],
+   "source": [
     "def overall_performance(grades_dict):\n",
     "    best_student = max(grades_dict, key=lambda student: average_grade(grades_dict[student]))\n",
     "    return best_student\n",
     "\n",
-    "# Example usage:\n",
-    "print(\"Average grade for Eva:\", average_grade(grades['Eva']))\n",
-    "print(\"Subject with highest grade for David:\", highest_grade_subject(grades['David']))\n",
-    "print(\"Passing students:\", passing_students(grades))\n",
-    "print(\"Subject-wise performance:\", subject_wise_performance(grades))\n",
-    "print(\"Students failed in Science:\", students_failed_subject(grades, 'English'))\n",
     "print(\"Overall best performing student:\", overall_performance(grades))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "45b71652",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alice's highest grade subject: English\n",
-      "Bob's highest grade subject: Science\n",
-      "Charlie's highest grade subject: History\n",
-      "David's highest grade subject: History\n",
-      "Eva's highest grade subject: Science\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Find the highest grade subject for each student\n",
-    "for student in students:\n",
-    "    student_grades = grades[student]\n",
-    "    subject = highest_grade_subject(student_grades)\n",
-    "    print(f\"{student}'s highest grade subject: {subject}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "d3790e64",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average Grade: 88.75\n",
-      "Highest Grade Subject: English\n",
-      "Passing Students: ['Alice', 'Bob', 'Charlie', 'David']\n",
-      "Subject Wise Performance: {'Math': 80.6, 'Science': 80.4, 'English': 72.0, 'History': 82.2}\n",
-      "Students Failed in English: ['Eva']\n",
-      "Overall Performance: Alice\n"
-     ]
-    }
-   ],
-   "source": [
-    "def average_grade(grades_list):\n",
-    "    return sum(grades_list) / len(grades_list)\n",
-    "\n",
-    "def highest_grade_subject(grades_list):\n",
-    "    max_grade = max(grades_list)\n",
-    "    subject_index = grades_list.index(max_grade)\n",
-    "    subjects = ['Math', 'Science', 'English', 'History']\n",
-    "    return subjects[subject_index]\n",
-    "\n",
-    "def passing_students(grades_dict):\n",
-    "    passed_students = []\n",
-    "    for student, grades_list in grades_dict.items():\n",
-    "        if all(grade >= 50 for grade in grades_list):\n",
-    "            passed_students.append(student)\n",
-    "    return passed_students\n",
-    "\n",
-    "def subject_wise_performance(grades_dict):\n",
-    "    performance = {}\n",
-    "    subjects = ['Math', 'Science', 'English', 'History']\n",
-    "    for subject in subjects:\n",
-    "        subject_grades = [grades_dict[student][subjects.index(subject)] for student in students]\n",
-    "        performance[subject] = average_grade(subject_grades)\n",
-    "    return performance\n",
-    "\n",
-    "def students_failed_subject(grades_dict, subject_name):\n",
-    "    failed_students = []\n",
-    "    subject_index = ['Math', 'Science', 'English', 'History'].index(subject_name)\n",
-    "    for student, grades_list in grades_dict.items():\n",
-    "        if grades_list[subject_index] < 50:\n",
-    "            failed_students.append(student)\n",
-    "    return failed_students\n",
-    "\n",
-    "def overall_performance(grades_dict):\n",
-    "    average_grades = {student: average_grade(grades_list) for student, grades_list in grades_dict.items()}\n",
-    "    best_student = max(average_grades, key=average_grades.get)\n",
-    "    return best_student\n",
-    "\n",
-    "# Example usage:\n",
-    "print(\"Average Grade:\", average_grade(grades['Alice']))\n",
-    "print(\"Highest Grade Subject:\", highest_grade_subject(grades['Alice']))\n",
-    "print(\"Passing Students:\", passing_students(grades))\n",
-    "print(\"Subject Wise Performance:\", subject_wise_performance(grades))\n",
-    "print(\"Students Failed in English:\", students_failed_subject(grades, 'English'))\n",
-    "print(\"Overall Performance:\", overall_performance(grades))"
    ]
   },
   {
