--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -67,6 +67,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_file(file_path, content):\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        file.write(content)\n",
+    "\n",
+    "create_file(\"test.txt\", \"This is text file\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a test file.\n",
+      "This is another line.\n",
+      "This is a test file.\n",
+      "This is a new line\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"test.txt\", 'r') as f:\n",
+    "    content = f.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"D:\\\\Python\\\\Python Basics\\\\9.File_Handling\\\\test.txt\", 'w') as f:\n",
+    "    f.write(\"This is a test file.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'a') as f:\n",
+    "    # Append the text to the end of the file\n",
+    "    f.write(\"\\nThis is another line.\")\n",
+    "    f.write(\"\\nThis is a test file.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "his is a test file.\n",
+      "This is another line.\n",
+      "This is a test file.\n",
+      "This is a new line\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'a+') as f:\n",
+    "    f.write(\"\\nThis is a new line\")\n",
+    "    f.seek(1)\n",
+    "    print(f.read())\n",
+    "\n",
+    "f.close() "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -104,27 +186,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi Good Morning\n",
-      "Good Night\n"
-     ]
-    }
-   ],
-   "source": [
-    "fvar = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
-    "res=fvar.read()\n",
-    "print(res)\n",
-    "fvar.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -143,6 +204,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Good Morning\n",
+      "Good Night\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
+    "res=file.read()\n",
+    "print(res)\n",
+    "file.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -156,7 +238,6 @@
    "outputs": [],
    "source": [
     "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','w')\n",
-    "\n",
     "str='Hi Good Morning'\n",
     "f.write(str)\n",
     "\n",
@@ -181,7 +262,6 @@
    ],
    "source": [
     "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
-    "\n",
     "f.read()"
    ]
   },
@@ -194,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,26 +284,6 @@
     "f.write(str_to_write)\n",
     "\n",
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hi Good Morning\n",
-      "Good Night\n"
-     ]
-    }
-   ],
-   "source": [
-    "f=open(r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt','r')\n",
-    "\n",
-    "print(f.read())"
    ]
   },
   {
@@ -323,73 +383,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using writelines() Function\n",
+    "**Using writelines() Function**\n",
     "\n",
     "Write a python program to write multiple lines of text into a file:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def writelines():\n",
-    "    file_path = r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt'\n",
-    "    \n",
-    "    with open(file_path, 'w') as f:\n",
-    "        while True:\n",
-    "            line = input('Enter a line: ')\n",
-    "            f.write(line + '\\n')  # Add a newline character after each line\n",
-    "            more_lines = input('Are there more lines? Enter Y for yes and N for No: ')\n",
-    "            if more_lines.upper() != 'Y':\n",
-    "                break\n",
-    "        f.close()\n",
-    "# Example usage\n",
-    "writelines()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**File Handling With Exception**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File content:\n",
-      "Hello How Are You\n"
-     ]
-    }
-   ],
-   "source": [
-    "def read():\n",
-    "    file_path = r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt'\n",
-    "    \n",
-    "    try:\n",
-    "        with open(file_path, 'r') as f:\n",
-    "            lines = f.readlines()\n",
-    "            if not lines:\n",
-    "                print(\"The file is empty.\")\n",
-    "            else:\n",
-    "                print(\"File content:\")\n",
-    "                for line in lines:\n",
-    "                    print(line.strip())  # strip() removes leading and trailing whitespaces\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"File not found at path: {file_path}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "\n",
-    "# Example usage\n",
-    "read()\n"
    ]
   },
   {
@@ -473,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +482,8 @@
       "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt\n",
       "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt2\n",
       "D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt3\n",
+      "\n",
+      "Good NightGood Nightlkjhgf\n",
       "\n"
      ]
     }
@@ -496,52 +494,12 @@
     "\n",
     "f.write(str+\"\\n\")\n",
     "\n",
-    "f.seek(2,0)\n",
+    "f.seek(2)\n",
     "\n",
     "str=f.read()\n",
     "print(str)\n",
     "\n",
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The format of using 'with' is:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(r'sample.txt', 'w') as f:\n",
-    "\tf.write('I am a learner\\n')\n",
-    "\tf.write('Python is easy to learn\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am a learner\n",
-      "\n",
-      "Python is easy to learn\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(r'sample.txt','r') as f:\n",
-    "\tfor line in f:\n",
-    "\t\tprint(line)"
    ]
   },
   {
@@ -596,7 +554,7 @@
    ],
    "source": [
     "# Open the file in r+ mode\n",
-    "with open('sample.txt', 'r+') as file:\n",
+    "with open(r'sample.txt', 'r+') as file:\n",
     "    # Read the current content of the file\n",
     "    content = file.read()\n",
     "    print(\"Current content of the file:\")\n",
@@ -615,6 +573,49 @@
     "    updated_content = file.read()\n",
     "    print(\"Updated content of the file:\")\n",
     "    print(updated_content)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**File Handling With Exception**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File content:\n",
+      "Hello How Are You\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read():\n",
+    "    file_path = r'D:\\Python\\Python Basics\\9.File_Handling\\myfile.txt'\n",
+    "    \n",
+    "    try:\n",
+    "        with open(file_path, 'r') as f:\n",
+    "            lines = f.readlines()\n",
+    "            if not lines:\n",
+    "                print(\"The file is empty.\")\n",
+    "            else:\n",
+    "                print(\"File content:\")\n",
+    "                for line in lines:\n",
+    "                    print(line.strip())  # strip() removes leading and trailing whitespaces\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"File not found at path: {file_path}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "# Example usage\n",
+    "read()\n"
    ]
   }
  ],
